# refchecker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.gpu  MANIFEST.in  Makefile  PLANNING.md  PR_llm_index_docs.md  QUICKSTART.md  README.md  README_WEBUI.md  SECURITY_REMEDIATION.md  STRUCTURE.md  TEST_STATUS.md  WEBUI_COMPLETE.md  WEBUI_IMPLEMENTATION.md  backend.err  build.sh  build_package.py  check_arxiv_errors.py  check_arxiv_versions.py  check_db.py  compare_results.py  docker-compose.yml  docs_index.md  extraction_test.txt  fix_model.py  full_test_output.txt  full_tests.txt  llm_index_docs_summary.md  pyproject.toml  pytest.ini  refchecker.py  refchecker_history.db  reference_errors.txt  reference_errors1.txt  render.yaml  requirements-dev.txt  (+16 more)
.claude/: ai-detection-review.workflow.js
.claude-flow/data/: pending-insights.jsonl
.github/: copilot-instructions.md  docker-markdownlint.yml  markdownlint.config.yaml
.github/workflows/: desktop-release.yml  manual-release.yml  release.yml  test.yml
backend/: .encryption_key  __init__.py  article_chat.py  auth.py  check_history.py  cites_refs.py  cli.py  concurrency.py  database.py  export.py  extraction_test.txt  gap_finder.py  history_output.txt  inline_citation_checker.py  main.py  pdf_convert.py  refchecker_history.db  refchecker_wrapper.py  retraction.py  run_full_check.py  test_extraction.py  thumbnail.py  usage_tracker.py  usage_tracking.py  websocket_manager.py
backend/static/: index.html
backend/uploads/: cf697eca-e290-4a14-87de-7effe1e14fd6_test_bibliography.txt
config/: settings.py
docs/: BUTTON_DESIGN.md  ENTERPRISE_CONNECTORS_DESIGN.md  FEATURES.md  MULTIUSER.md  README.md  REMAINING_WORK.md  TEMP_ROADMAP.md  design.md  hallucination-mode-plan.md  testing.md  web-ui.md
output/: assessment.md  iclr10_haiku_results.json
paper/: paper.md
refchecker/checkers/: crossref.py  github_checker.py  local_semantic_scholar.py  openalex.py  openreview_checker.py  semantic_scholar.py  webpage_checker.py
refchecker/core/: parallel_processor.py  refchecker.py
scripts/: _commit.py  analyze_report.py  bench_ss_endpoints.py  benchmark_bulk_check.py  check_batch_eligible.py  generate_assessment_graphs.py  lint_markdown.py  llm_index_docs.py  recheck_hallucinations.py  start_vllm_server.py  test_ss_batch_api.py  update_local_database.py
src/: __init__.py  __version__.py
src/checkers/: __init__.py  crossref.py  enhanced_hybrid_checker.py  google_scholar.py  hybrid_reference_checker.py  local_semantic_scholar.py  openalex.py  openreview_checker.py  semantic_scholar.py  webpage_checker.py
src/config/: settings.py
src/core/: parallel_processor.py  refchecker.py
src/database/: download_semantic_scholar_db.py  semantic_dataset_download.py
src/llm/: base.py  providers.py
src/refchecker/: __init__.py  __version__.py
src/services/: pdf_processor.py
src/utils/: __init__.py  arxiv_utils.py  author_utils.py  bibtex_parser.py  config_validator.py  doi_utils.py  error_utils.py  text_utils.py  url_utils.py
tauri-app/: .gitignore  README.md  package-lock.json  package.json
tauri-app/docs/: SIGNING.md
tauri-app/frontend/: index.html
tauri-app/python/: refchecker-server.spec  server_entry.py
tauri-app/scripts/: build-sidecar.ps1  build-sidecar.sh  generate-icons.sh  generate-updater-key.sh
tauri-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/permissions/: allow-open-external.json
tauri-app/src-tauri/src/: main.rs
tests/: README.md  __init__.py  conftest.py  test_bibliography_selection.py  test_pypi.py  validate_attention_paper.py  validate_local_db.py  validate_papers.py  validate_refchecker.py
tests/e2e/: test_end_to_end_workflows.py
tests/fixtures/: hallucination_7ref_sample.bib  hallucination_mixed_sample.bib  hallucination_regression_refs.json
tests/integration/: test_H8tismBT3Q_regression.py  test_api_integration.py  test_arxiv_citation_integration.py  test_basic_integration.py  test_cached_full_paper_regression.py  test_grobid_integration.py  test_hallucination_7ref_fixture.py  test_hallucination_mixed_fixture.py  test_live_hallucination_llm_benchmark.py  test_llm_integration.py  test_multi_paper_mode_consistency.py  test_neural_machine_translation_paper.py  test_title_author_parsing_integration.py  test_working_integration.py
tests/unit/: test_add_reference.py  test_ai_detection.py  test_ai_detection_detectors_passthrough.py  test_and_others_regression.py  test_api_authorization.py  test_article_chat.py  test_arxiv_citation_checker.py  test_arxiv_id_verification.py  test_arxiv_local_db_fallback.py  test_arxiv_lookup_priority.py  test_arxiv_rate_limiter.py  test_arxiv_url_warning.py  test_arxiv_utils.py  test_asterisk_removal.py  test_auth.py  test_auth_reload.py  test_author_count_display.py  test_author_honorific_and_name_cleaning.py  test_author_profile.py  test_backend_settings_regression.py  test_basic_functionality.py  test_biblatex_parsing.py  test_bibliography_cache.py  test_bibliography_end_detection.py  test_bibtex_cleaning.py  test_bibtex_parsing.py  test_bibtex_parsing_validation.py  test_bibtex_validation_fallback.py  test_bulk_checkpoint_resume.py  test_bulk_pipeline.py  test_check_url_gate.py  test_citation_context_clause.py  test_citation_contexts.py  test_citation_functions.py  test_cites_refs.py  test_cli_database_flags.py  test_cli_parity.py  test_compound_surname_match.py  test_corrections_annotated.py  test_counting_and_filtering_regression.py  (+85 more)
web-ui/: README.md  backend.err  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  run_test.bat  start.js  tmp_playwright_probe.cjs  vite.config.js
web-ui/e2e/: auth.spec.js  concurrent_checks.spec.js  debug_dual_check.spec.js  debug_error_status.spec.js  debug_file_upload.spec.js  debug_history_selection.spec.js  debug_missing_year_error.spec.js  debug_preview.spec.js  dual_check_routing.spec.js  hallucination_pending.spec.js  (+11 more)
(+341 files in other folders)
