[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-refchecker"
dynamic = ["version"]
description = "A comprehensive tool for validating reference accuracy in academic papers"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mark Russinovich", email = "markrussinovich@hotmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
    "pypdf>=6.10.2",
    "arxiv>=3.0.0",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.3",
    "colorama>=0.4.6",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.27.3",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "pdfplumber>=0.11.9",
    "pybtex>=0.26.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "black>=26.3.1",
    "isort>=8.0.1",
    "flake8>=7.3.0",
    "mypy>=1.20.2",
]
docs = [
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]
llm = [
    "openai>=2.33.0",
    "anthropic>=0.97.0",
    "google-genai>=1.73.1",
]
optional = [
    "lxml>=6.1.0",
    "selenium>=4.43.0",
    "pikepdf>=10.5.1", 
    "nltk>=3.9.4",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
]
vllm = [
    "vllm>=0.20.0",
    "huggingface_hub>=1.12.0",
    "torch>=2.11.0",
]
webui = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",  # Includes websockets for WebSocket support
    "pydantic>=2.13.3",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "cryptography>=47.0.0",
    "pymupdf>=1.27.2.3",
    "Pillow>=12.2.0",  # For thumbnail image enhancement
    "python-multipart>=0.0.27",  # For FastAPI form data handling
    "python-jose[cryptography]>=3.5.0",  # For JWT token creation and validation (multi-user auth)
    "itsdangerous>=2.2.0",  # For signed cookies / CSRF protection
]

[project.urls]
Homepage = "https://github.com/markrussinovich/refchecker"
Repository = "https://github.com/markrussinovich/refchecker"
"Bug Tracker" = "https://github.com/markrussinovich/refchecker/issues"

[project.scripts]
academic-refchecker = "refchecker.core.refchecker:main"
refchecker-webui = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["refchecker*", "backend*"]

[tool.setuptools.dynamic]
version = {attr = "refchecker.__version__.__version__"}

[tool.setuptools.package-data]
"refchecker" = ["*.txt", "*.md", "*.conf"]
"refchecker.config" = ["*.conf"]
"backend" = ["static/*", "static/**/*"]
