[package]
name = "refchecker-desktop"
version = "0.1.0"
description = "RefChecker Desktop"
authors = ["Ario Moniri <moniriario@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
portpicker = "0.1"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
